<resources>
    <string name="app_name">Invated Manager</string>

    <string name="navigation_drawer_open">Abrir Menu</string>
    <string name="navigation_drawer_close">Fechar Menu</string>

    <string name="configuracoes">Configurações</string>
    <string name="todos">Todos</string>
    <string name="presentes">Presentes</string>
    <string name="ausentes">Ausentes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome">Nome</string>
    <string name="ausente">ausente</string>
    <string name="presente">presente</string>
    <string name="nao_confirmado">nao confirmado</string>
    <string name="btnSave">Salvar</string>
    <string name="nome_obrigatorio">Nome do Obrigatório</string>
    <string name="convidado_salvo">Convidado salvo com sucesso!</string>
    <string name="convidado_nao_salvo">Erro ao salvar registro do convidado!</string>
    <string name="msg_sucess_update">Convite atualizado com sucesso!</string>
    <string name="msg_unsucess_update">Convite nao atualizado!</string>
    <string name="total">Total</string>
    <string name="documento">Documento</string>
</resources>
