<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.desenvolvedor2015.invatedmanager.fragments.AllInvatedFragment">

   <LinearLayout
       android:id="@+id/linear_dashbord"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       >
      <LinearLayout

          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

         <TextView
             android:text="@string/presentes"
             android:layout_width="0dp"
             android:textAlignment="center"
             android:layout_height="wrap_content"
             android:layout_weight="1"/>
         <TextView
             android:text="@string/ausentes"
             android:layout_width="0dp"
             android:textAlignment="center"
             android:layout_height="wrap_content"
             android:layout_weight="1"/>

         <TextView
             android:text="@string/total"
             android:layout_width="0dp"
             android:textAlignment="center"
             android:layout_height="wrap_content"
             android:layout_weight="1"/>

      </LinearLayout>

      <LinearLayout

          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

         <TextView
             android:id="@+id/txt_present_count"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textAlignment="center"
             android:text="0"
             />
         <TextView
             android:id="@+id/txt_absent_count"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textAlignment="center"
             android:text="0"
             />

         <TextView
             android:id="@+id/txt_all_invated"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textAlignment="center"
             android:text="0"
             />

      </LinearLayout>




   </LinearLayout>

   <android.support.v7.widget.RecyclerView
       android:id="@+id/rcv_All_Invated"
       android:focusable="true"
       android:clickable="true"
       android:background="?android:attr/selectableItemBackground"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_below="@id/linear_dashbord"
       />

</RelativeLayout>
